<resources>

    <string name="ok">Ok</string>
    <string name="loading">Carregando</string>
    <string name="login">Login</string>
    <string name="cpf">\t\tCPF</string>
    <string name="data_nascimento">\t\tData Nascimento</string>
    <string name="registrar">Registrar</string>
    <string name="registro">Registro</string>
    <string name="header_registrar">Escolha o tipo de registro</string>
    <string name="individual">Individual</string>
    <string name="escola">Escola</string>
    <string name="log_out">Log Out</string>
    <string name="twitter">Twitter</string>

    <string name="connection_failure">Verifique sua conexão e tente novamente.</string>
    <string name="user_not_found">Usuário não cadastrado.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_map">Mapa</string>
    <string name="title_courses">Cursos</string>
    <string name="title_instagram">Camera</string>
    <string name="title_programming">Programação</string>
    <string name="title_my_programming">Minha Programação</string>
    <string name="title_menu">Menu</string>
    <string name="cantinas">Cantinas</string>

    <string name="fragment_cursos_txt_1">Você está off-line.</string>
    <string name="fragment_cursos_txt_2">Verifique sua conexão com a internet e tente novamente</string>
    <string name="sem_conexao_internet">Não foi possível carregar página. Verifique sua conexão com a internet</string>
    <string name="conexao_internet_habilitada">Carregando página de cursos ...</string>

    <string name="sobre">
        "Aplicativo PUC Aberta \nversão 2.0 \n\nEquipe:\nLucas Rafael Madeira Vasconcelos \nAluno do curso de Ciência da Computação - Coração Eucarístico \n\nProf. Felipe Domingos da Cunha \ne\n Prof. Max do Val Machado \nProfessores do Departamento de Ciência da Computação - ICEI"
    </string>
    <string name="ver_no_mapa">Ver no mapa</string>
</resources>
